--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -10,14 +10,16 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css">
-    <link rel="preload" href="https://res.cloudinary.com/dfa7zee9i/image/upload/s--TB-F7xJo--/f_auto,q_auto/Background_dethfh" as="image">
-    <link rel="preload" href="https://res.cloudinary.com/dfa7zee9i/image/upload/s--bAMqTGyH--/f_auto,q_auto/Background-dark-mode_ikurqy" as="image">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css"
+    />
+    <!-- <link rel="preload" href="https://res.cloudinary.com/dfa7zee9i/image/upload/s--TB-F7xJo--/f_auto,q_auto/Background_dethfh" as="image">
+    <link rel="preload" href="https://res.cloudinary.com/dfa7zee9i/image/upload/s--bAMqTGyH--/f_auto,q_auto/Background-dark-mode_ikurqy" as="image"> -->
     <title>Chat App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
   </body>
 </html>
