--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -14,8 +14,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css"
     />
-    <!-- <link rel="preload" href="https://res.cloudinary.com/dfa7zee9i/image/upload/s--TB-F7xJo--/f_auto,q_auto/Background_dethfh" as="image">
-    <link rel="preload" href="https://res.cloudinary.com/dfa7zee9i/image/upload/s--bAMqTGyH--/f_auto,q_auto/Background-dark-mode_ikurqy" as="image"> -->
+    <link rel="preload" href="https://res.cloudinary.com/dfa7zee9i/image/upload/s--TB-F7xJo--/f_auto,q_auto/Background_dethfh" as="image">
+    <link rel="preload" href="https://res.cloudinary.com/dfa7zee9i/image/upload/s--bAMqTGyH--/f_auto,q_auto/Background-dark-mode_ikurqy" as="image"> 
     <title>Chat App</title>
   </head>
   <body>
